@@ -15,6 +15,7 @@
 * Fixed bug in git repo verification on build.
 * Added support for encryption
 * Removed short name and changed long name for AWS CLI Creds
+* Adding encrypted attribute by default
 
 ## v0.4.0:
 
